<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shop_item"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/TitleBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="@drawable/shop_item"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/app_name"
                android:textSize="28sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/ShoppingListScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/ShoppingListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

        <TableRow
            android:id="@+id/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:foreground="@drawable/shop_item">

            <Button
                android:id="@+id/DeleteAllButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete_all"
                android:textColor="#000000" />

            <Button
                android:id="@+id/SortButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/sort"
                android:textColor="#000000" />

            <Button
                android:id="@+id/AddItemButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_item_button_name"
                android:textColor="#000000" />
        </TableRow>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/ad_test_id" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/AddItemTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_border"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/UserEnterItemNameBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autofillHints="Item name"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|center_horizontal"

            android:hint="@string/hint"
            android:inputType="textPersonName|textCapSentences"
            android:maxLength="30"
            android:textSize="25sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/ChangeColourButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/green"
            android:foreground="@drawable/shop_item"
            android:text="@string/change_colour_button_name"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BackButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/ConfrimAddButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_add_button_name"
                android:textColor="#000000" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ItemInfoTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/custom_border"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible">

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <EditText
            android:id="@+id/ItemNameView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints="Item Name"
            android:background="#FFFFFF"
            android:ems="10"
            android:gravity="center|center_horizontal"
            android:hint="@string/hint"
            android:inputType="textPersonName|textCapSentences"
            android:maxLength="30"
            android:textColorHighlight="#000000"
            android:textColorLink="#000000"
            android:textSize="25sp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/EditColourButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:foreground="@drawable/shop_item"
            android:text="@string/change_colour_button_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/DeleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/delete"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TableRow
            android:id="@+id/BottomButtonBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/InfoTabBackButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/ConfirmChangesButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textColor="#000000" />

        </TableRow>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>